--- a/配置.ini
+++ b/配置.ini
@@ -1,21 +1,21 @@
-大区:  创建时间--2017-08／12:52
+﻿大区:  创建时间--2017-08／12:52
 Name             Price
-材料-无色小晶块  : 0 
-材料-白色小晶块  : 0 
-材料-黑色小晶块  : 0 
-材料-无色小晶块  : 0 
-材料-蓝色小晶块  : 0 
-材料-红色小晶块  : 0 
-材料-金色小晶块  : 0 
-材料-魔力结晶    : 0 
-材料-生命之息    : 0 
-材料-黄金粉末    : 0 
-材料-龙之心      : 0 
-材料-蓝色魔力产物: 0 
-材料-红色魔力产物: 0 
-材料-黑色魔力产物: 0 
-材料-白色魔力产物: 0 
-材料-无色魔力产物: 0 
+材料-无色小晶块  : 10 
+材料-白色小晶块  : 10 
+材料-黑色小晶块  : 10 
+材料-无色小晶块  : 10 
+材料-蓝色小晶块  : 10 
+材料-红色小晶块  : 10 
+材料-金色小晶块  : 10 
+材料-魔力结晶    : 10 
+材料-生命之息    : 10 
+材料-黄金粉末    : 10 
+材料-龙之心      : 10 
+材料-蓝色魔力产物: 10 
+材料-红色魔力产物: 10 
+材料-黑色魔力产物: 10 
+材料-白色魔力产物: 10 
+材料-无色魔力产物: 10 
 下面是消耗品        Price需求量(日销量)
 消耗品-顶级生命灵药: 0需求量: 0
 消耗品-顶级力量灵药: 0需求量: 0
