--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//Code/Calculate.java=UTF-8
+encoding//Code/Consumables.java=UTF-8
 encoding//Code/Document.java=UTF-8
