--- a/配置.ini
+++ b/配置.ini
@@ -1,28 +1,16 @@
-﻿大区:  创建时间--2017-08／12:52
-Name             Price
-材料-无色小晶块  : 10 
-材料-白色小晶块  : 10 
-材料-黑色小晶块  : 10 
-材料-无色小晶块  : 10 
-材料-蓝色小晶块  : 10 
-材料-红色小晶块  : 10 
-材料-金色小晶块  : 10 
-材料-魔力结晶    : 10 
-材料-生命之息    : 10 
-材料-黄金粉末    : 10 
-材料-龙之心      : 10 
-材料-蓝色魔力产物: 10 
-材料-红色魔力产物: 10 
-材料-黑色魔力产物: 10 
-材料-白色魔力产物: 10 
-材料-无色魔力产物: 10 
-下面是消耗品        Price需求量(日销量)
-消耗品-顶级生命灵药: 1需求量: 2
-消耗品-顶级力量灵药: 4需求量: 3
-消耗品-顶级魔力灵药: 5需求量: 6
-消耗品-顶级智力灵药: 1需求量: 8
-消耗品-神秘世界的玩具: 1需求量: 3
-消耗品-神圣祝福药水: 6需求量: 5
-消耗品-斗神之吼秘药: 1需求量: 9
-消耗品-霸体护甲秘药: 11需求量: 11
-消耗品-瞬间移动药剂: 123需求量: 12
+无色小晶块  : 0 
+白色小晶块  : 0 
+黑色小晶块  : 0 
+无色小晶块  : 0 
+蓝色小晶块  : 0 
+红色小晶块  : 0 
+金色小晶块  : 0 
+魔力结晶    : 0 
+生命之息    : 0 
+黄金粉末    : 0 
+龙之心      : 0 
+蓝色魔力产物: 0 
+红色魔力产物: 0 
+黑色魔力产物: 0 
+白色魔力产物: 0 
+无色魔力产物: 0 
